# stackforce-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 5b50faa6f642_initial.py  7037f95f1d15_add_name_field.py  dc83ac2a00cd_alter_is_adaptive_type.py
src/: admin.py  app.py  logger.py  main.py  settings.py
src/app/: routers.py
src/app/claim/: endpoints.py  models.py  schemas.py  services.py
src/config/: logger.py  settings.py
src/misc/: database.py  dependencies.py
src/tic_tac_toe/: endpoints.py
