[tool.poetry]
name = "stackforce-backend"
version = "0.1.0"
description = ""
authors = ["alexeykudimov <work.alexeykudimov@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"
psycopg2-binary = "^2.9.3"
sqlalchemy = "1.4.46"
alembic = "^1.10.2"
sqladmin = "0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
